--- a/templates/fundumental.html
+++ b/templates/fundumental.html
@@ -9,23 +9,16 @@
         Fundamental analysis uses the information of a company such as its balance sheet, income statements, etc. to compute its value.
     </p>
     <div class="row">
-        <form class="form-inline">
-            <!-- <div class="form-group mx-sm-5 mb-2"> -->
-
-                
-            <div class="form-group">
-            <!-- <div class="form-row"> -->
-                <div class="col-md-3">
-                    <label for="tinker" class="form-label" placeholder="AAPL,GOOG,MSFT">Tinker:     </label>
-                </div>
-                <div class="col-md-8">
-                    <input class="form-control mx-sm-3" id="tinker" style='width: 35em' placeholder="AAPL,GOOG,MSFT">
-                </div>
-
-                <div class="col-md-3" style="position: absolute; right: 5em; padding-left: 1px;">
-                    <button type="submit" class="btn btn-primary mb-2" >Submit</button>
-                </div>
+        <form class="form-inline" action="{{ url_for('fundumentals') }}" method="post">
+            {{ form.hidden_tag() }}
+            <div class=col-md-3>
+                {{form.tinker.label }}
             </div>
+            <div class='col-md-8'>
+                {{ form.tinker(size=32) }}
+            </div>
+            <div class='col-md-3'>
+                {{ form.submit() }}
             </div>
         </form>
             
@@ -35,10 +28,12 @@
 </div>
 <br>
 
-<!-- <div class=page>
-    {#% for table in tables %#}
-                {#{columns[loop.index]}#}
-                {#{ table|safe }#}
-    {#% endfor %#}
-</div> -->
+<div class=page>
+    {%if tables %}
+        {% for table in tables %}
+            {{columns[loop.index]}}
+                {{ table|safe }}
+        {% endfor %}
+    {% endif %}
+</div>
 {% endblock %} 
