--- a/templates/layout.html
+++ b/templates/layout.html
@@ -1,3 +1,6 @@
+<!doctype html>
+<title>{% if title %} {{ title }} {% else %} Stocker :){% endif %}</title>
+
 <head>
     <!-- Required meta tags -->
     <meta charset="utf-8">
@@ -19,23 +22,7 @@
         <div class="navbar navbar-fixed-top">
             {% include "nav.html" %}
         </div>
-
         <div class="container">
-            {% with messsages = get_flashed_messages(with_categories=true) %}
-                {% if messages %}
-                    {% for message in messages %}
-                        <div class="alert alert-{{ category }} alert-dismissible fade show" role="alert">
-                            <span>{{ message }} </span>
-                            <button type="button" class="close" data-dismiss="alert" aria-label="Close">
-                                <span aria-hidden="true">&times;</span>
-                            </button>
-                        </div>
-                    {% endfor %}
-                {% endif %}
-            {% endwith %}
-
-
-
             <div class="container-xl">
                 
                 <h1 class="display-4">
@@ -44,7 +31,21 @@
                         {% endif %}
                 </h1>
                 <br>
-            </div>
+                {% with messages = get_flashed_messages(with_categories=true) %}
+                    {% if messages %}
+                    <div class=flashes>
+                      {% for category, message in messages %}
+                        <div class="alert alert-{{ category }} alert-dismissible fade show" role="alert">
+                            <span>{{ message }} </span>
+                            <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                                <span aria-hidden="true">&times;</span>
+                            </button>
+                        </div>
+                        {% endfor %}
+                    </div>
+                    {% endif %}
+                    {% endwith %}
+                <!-- </div> -->
             <div class=container-fluid>
                 <div class="jumbotron" style="width: 100%;"> 
                     {% block content %}
