--- a/templates/nav.html
+++ b/templates/nav.html
@@ -10,7 +10,7 @@
                 <a class="nav-link" href="{{ url_for('fundumentals') }}">Home <span class="sr-only">(current)</span></a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="{{ url_for('fundumentals') }}">Fundamentals</a>
+                <a class="nav-link" href="{{ url_for('fundumentals') }}">Fundumentals</a>
             </li>
             <li class="nav-item">
                 <a class="nav-link" href="{{ url_for('home_function') }}">Second Page</a>
